test/libsolidity/syntaxTests/nameAndTypeResolution/modifier_is_not_a_valid_typename.sol
contract test {
    modifier mod() { _; }

    function f() public {
        mod g;
    }
}
// ----
// TypeError: (77-80): Name has to refer to a struct, enum or contract.
